@@ -114,6 +114,8 @@ void xfce_desktop_popup_secondary_root_menu(XfceDesktop *desktop,
                                             guint button,
                                             guint activate_time);
 
+void xfce_desktop_refresh(XfceDesktop *desktop);
+
 G_END_DECLS
 
 #endif
