@@ -2,7 +2,10 @@ Xfce 4.6.1
 ----------
 
   * Fix desktop menu failing to load on FreeBSD (bug 3370).
-  * Ensure root window properties get deleted when xfdesktop quits (bug 5154).
+  * Ensure root window properties get deleted when xfdesktop
+    quits (bug 5154).
+  * Reload the backdrop and icon view when 'xfdesktop --reload'
+    is run (bug 5156).
 
 
 Xfce 4.6.0
